--- a/zh-hans/affiliations.html
+++ b/zh-hans/affiliations.html
@@ -419,8 +419,8 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq01.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq01.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq01.png">
-			      	  			<img class="visible-sm"  src="../images/inq01.png">
+			      	  			<!-- <img class="visible-md visible-lg"  src="../images/515x350inq01.png"> -->
+			      	  			<img class="visible-sm"  src="../images/515x311-Co-habitat-logo_header.png">
 			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-logo_header.png">
 
 										</picture>
@@ -436,8 +436,8 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq03.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq03.webp"> -->
 
-				      	  		<img class="visible-md visible-lg"  src="../images/515x350inq03.jpg">
-			      	  			<img class="visible-sm"  src="../images/inq03.jpg">
+				      	  		<!-- <img class="visible-md visible-lg"  src="../images/515x350inq03.jpg"> -->
+			      	  			<img class="visible-sm"  src="../images/515x311-Co-habitat-Entry-Way.png">
 			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Entry-Way.png">
 
 										</picture>
@@ -452,8 +452,8 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq07.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq07.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq07.jpg">
-			      	  			<img class="visible-sm"  src="../images/inq07.jpg">
+			      	  			<!-- <img class="visible-md visible-lg"  src="../images/515x350inq07.jpg"> -->
+			      	  			<img class="visible-sm"  src="../images/514x311-Co-habitat-Reception.png">
 			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Reception.png">
 
 										</picture>
@@ -470,8 +470,8 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq06.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq06.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq06.jpg">
-			      	  			<img class="visible-sm"  src="../images/inq06.jpg">
+			      	  			<!-- <img class="visible-md visible-lg"  src="../images/515x350inq06.jpg"> -->
+			      	  			<img class="visible-sm"  src="../images/515x311-Co-habitat-Hot-Desks-and-Shared-Office.png">
 			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Hot-Desks-and-Shared-Office.png">
 
 										</picture>
@@ -487,8 +487,8 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq02.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq02.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq02.jpg">
-			      	  			<img class="visible-sm"  src="../images/inq02.jpg">
+			      	  			<!-- <img class="visible-md visible-lg"  src="../images/515x350inq02.jpg"> -->
+			      	  			<img class="visible-sm"  src="../images/515x311-Co-habitat-Private-Office.png">
 			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Private-Office.png">
 
 										</picture>
@@ -504,8 +504,8 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq04.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq04.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq04.jpg">
-			      	  			<img class="visible-sm" src="../images/inq04.jpg">
+			      	  			<!-- <img class="visible-md visible-lg"  src="../images/515x350inq04.jpg"> -->
+			      	  			<img class="visible-sm" src="../images/515x311-Co-habitat-Boardroom.png">
 			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Boardroom.png">
 
 										</picture>
@@ -563,9 +563,9 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq01.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq01.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x311-Co-habitat-logo_header.png">
-			      	  			<img class="visible-sm"  src="../images/inq01.png">
-			      	  			<img class="visible-xs"  src="../images/330x224inq01.png">
+			      	  			<img class="visible-md visible-lg"  src="../images/555x377-Co-habitat-logo_header.png">
+			      	  			<!-- <img class="visible-sm"  src="../images/inq01.png">
+			      	  			<img class="visible-xs"  src="../images/330x224inq01.png"> -->
 
 										</picture>
 
@@ -580,9 +580,9 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq03.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq03.webp">
  -->
-				      	  		<img class="visible-md visible-lg"  src="../images/515x311-Co-habitat-Entry-Way.png">
-			      	  			<img class="visible-sm"  src="../images/inq03.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq03.jpg">
+				      	  		<img class="visible-md visible-lg"  src="../images/555x377-Co-habitat-Entry-Way.png">
+			      	  			<!-- <img class="visible-sm"  src="../images/inq03.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224inq03.jpg"> -->
 
 										</picture>
 
@@ -596,9 +596,9 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq07.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq07.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/514x311-Co-habitat-Reception.png">
-			      	  			<img class="visible-sm"  src="../images/inq07.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq07.jpg">
+			      	  			<img class="visible-md visible-lg"  src="../images/555x377-Co-habitat-Reception.png">
+			      	  			<!-- <img class="visible-sm"  src="../images/inq07.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224inq07.jpg"> -->
 
 										</picture>
 
@@ -614,9 +614,9 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq06.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq06.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x311-Co-habitat-Hot-Desks-and-Shared-Office.png">
-			      	  			<img class="visible-sm"  src="../images/inq06.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq06.jpg">
+			      	  			<img class="visible-md visible-lg"  src="../images/555x377-Co-habitat-Hot-Desks-and-Shared-Office.png">
+			      	  			<!-- <img class="visible-sm"  src="../images/inq06.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224inq06.jpg"> -->
 
 										</picture>
 
@@ -631,9 +631,9 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq02.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq02.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x311-Co-habitat-Private-Office.png">
-			      	  			<img class="visible-sm"  src="../images/inq02.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq02.jpg">
+			      	  			<img class="visible-md visible-lg"  src="../images/555x377-Co-habitat-Private-Office.png">
+			      	  			<!-- <img class="visible-sm"  src="../images/inq02.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224inq02.jpg"> -->
 
 										</picture>
 
@@ -648,9 +648,9 @@
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq04.webp">
 							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq04.webp"> -->
 
-			      	  			<img class="visible-md visible-lg"  src="../images/515x311-Co-habitat-Boardroom.png">
-			      	  			<img class="visible-sm" src="../images/inq04.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq04.jpg">
+			      	  			<img class="visible-md visible-lg"  src="../images/555x377-Co-habitat-Boardroom.png">
+			      	  			<!-- <img class="visible-sm" src="../images/inq04.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224inq04.jpg"> -->
 
 										</picture>
 
