change the Tutoring Services webpage title to Tutoring

--- a/en/courses.html
+++ b/en/courses.html
@@ -239,8 +239,8 @@
 	  			<img  src="../images/145x51AozhongqiaV6.png" class="img-responsive center-block visible-xs"  >
 				</picture> 
 
-	      <h2 id="tanyaTitle" class="visible-lg visible-md visible-sm" >Tutoring Services</h2>
-	    	<h1 id="tanyaTitleXS" class="visible-xs" >Tutoring Services</h1>
+	      <h2 id="tanyaTitle" class="visible-lg visible-md visible-sm" >Tutoring</h2>
+	    	<h1 id="tanyaTitleXS" class="visible-xs" >Tutoring</h1>
 
 	  </div>
 	</div>
