change the Fees webpage title to Workshops. I will write new content for this page.

--- a/en/fees.html
+++ b/en/fees.html
@@ -233,8 +233,8 @@
   			</picture> 
 
 
-			<h2 id="tanyaTitle" class="visible-lg visible-md visible-sm" >Fees</h2>
-			<h1 id="tanyaTitleXS" class="visible-xs" >Fees</h1>
+			<h2 id="tanyaTitle" class="visible-lg visible-md visible-sm" >Workshops</h2>
+			<h1 id="tanyaTitleXS" class="visible-xs" >Workshops</h1>
 
   		</div>
   	</div>
