Tutoring, Engineering and Workshops added to English navigation bars

--- a/en/fees.html
+++ b/en/fees.html
@@ -196,11 +196,11 @@
 				<ul class="nav navbar-nav navbar-left">
 					<li role="presentation" ><a href="../index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 					<li role="presentation"><a href="about.html">Professional Background</a></li>
-					<li role="presentation"><a href="courses.html">Tutoring Services</a></li>
-					<li role="presentation"><a href="engineering.html">Engineering Services</a></li>
+					<li role="presentation"><a href="courses.html">Tutoring</a></li>
+					<li role="presentation"><a href="engineering.html">Engineering</a></li>
 					<li role="presentation"><a href="qual.html">Qualifications</a></li>
 					<li role="presentation"><a href="affiliations.html">Affiliations</a></li>
-					<li role="presentation" class="active"><a href="fees.html">Fees</a></li>
+					<li role="presentation" class="active"><a href="fees.html">Workshops</a></li>
 					<li role="presentation" ><a href="contact.html">Contact</a></li>
 
 				</ul>
