--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 		    		<ul class="nav navbar-nav navbar-left">
 		    			<li role="presentation" class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 		    			<li role="presentation"><a href="en/about.html">Professional Background</a></li>
-		    			<li role="presentation"><a href="en/courses.html">Tutoring Services</a></li>
-		    			<li role="presentation"><a href="en/engineering.html">Engineering Services</a></li>
+		    			<li role="presentation"><a href="en/courses.html">Tutoring</a></li>
+		    			<li role="presentation"><a href="en/engineering.html">Engineering</a></li>
 		    			<li role="presentation"><a href="en/qual.html">Qualifications</a></li>
 		    			<li role="presentation"><a href="en/affiliations.html">Affiliations</a></li>
-		    			<li role="presentation"><a href="en/fees.html">Fees</a></li>
+		    			<li role="presentation"><a href="en/fees.html">Workshops</a></li>
 		    			<li role="presentation"><a href="en/contact.html">Contact</a></li>
 		    		</ul>
 
