Specific address location added to contact details.

--- a/en/contact.html
+++ b/en/contact.html
@@ -264,7 +264,7 @@
           <div id="contactD1" >
 	      	  <address >
 	      	  	Address:<span class="addrIndent"><strong>Co. Habitat - Co-Working Space</strong></span><br> 
-	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">33-35 Palmer Street Entrance via, Plume St</span><br>
+	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">Top Floor 33-35 Palmer Street Entrance via, Plume St</span><br>
 	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">South Townsville QLD 4810</span><br>
 	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">AUSTRALIA</span><br>
 	      	  </address>
