Description tag updated with current address information.

--- a/en/contact.html
+++ b/en/contact.html
@@ -15,7 +15,7 @@
   <link rel="alternate"  href="https://www.aozhongqiao.com/en/contact.html" hreflang="en">  
   <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/contact.html" hreflang="zh-hans">
 
-  <meta name="description" content="Email: tanya.barlow@aozhongqiao.com, Address: iNQ Central, Little Fletcher Street, Townsville, Queensland, Australia , Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
+  <meta name="description" content="Email: tanya.barlow@aozhongqiao.com, Address: Co. Habitat, Top Floor 33-35 Palmer Street Entrance via, Plume St South Townsville, Queensland, Australia , Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
   <meta name="google" content="notranslate">
 
