Corrected an error with JSON-LD

--- a/en/contact.html
+++ b/en/contact.html
@@ -197,7 +197,8 @@
 				"addressRegion" : "QLD",
 				"addressCountry" : "AUSTRALIA",
 				"postalCode" : "4810"
-			}
+			},
+			"priceRange" : "$75/hr, $45/hr (students), $35/hr (members of Townsville Chinese Club)"
 		}
 	</script>
 	
